ragisted and login button visibility fixed

--- a/src/servicepages/login/login.css
+++ b/src/servicepages/login/login.css
@@ -50,6 +50,7 @@
     border: none;
     border-radius: 10px;
     text-align: center;
+    display: none;
   }
   
   .loginRegisterButton {
@@ -64,4 +65,5 @@
     color: white;
     border-radius: 10px;
     margin-top: 30px;
+    display: none;
   }
