--- a/src/servicepages/register/register.css
+++ b/src/servicepages/register/register.css
@@ -69,4 +69,5 @@
     color: white;
     border-radius: 10px;
     margin-top: 30px;
+    display: none;
   }
